--- a/app/src/main/res/layout/activity_dodatki.xml
+++ b/app/src/main/res/layout/activity_dodatki.xml
@@ -24,10 +24,10 @@
         android:id="@+id/tekst2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:layout_below="@id/jakaKawa"
-        android:textSize="26sp"
-        android:text="Wielkość: "/>
+        android:layout_marginTop="30dp"
+        android:text="Rodzmiar: "
+        android:textSize="26sp" />
 
 
 
