--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,16 +11,16 @@
         android:id="@+id/tekst"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Kawiarenka"
         android:gravity="center"
-        android:textSize="34sp"/>
+        android:text="Kawiarnia"
+        android:textSize="34sp" />
 
     <ImageView
         android:id="@+id/obrazek"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tekst"
-        android:src="@drawable/kawa"/>
+        android:src="@drawable/kaffe" />
 
     <Button
         android:id="@+id/dalej"
